--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dev": "routify -c dev:vite ",
-    "build": "routify -b && vite build",
+    "build": "svelte-check && routify -b && vite build",
     "dev:vite": "vite",
     "serve": "vite preview",
     "validate": "svelte-check"
